force-app/main/default/objects/Meta_Insights_Daily__c/Meta_Insights_Daily__c.object-meta.xml
<CustomObject>
    <label>Insight Diário Meta</label>
    <nameField>
        <displayFormat>MID-{000000}</displayFormat>
        <label>Número do Insight</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights Diários Meta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>