force-app/main/default/objects/Meta_Insights_Daily__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Meta Insights Diários</relationshipLabel>
    <relationshipName>Meta_Insights_Daily</relationshipName>
    <type>Lookup</type>
</CustomField>