force-app/main/default/objects/Meta_Insights_Daily__c/fields/Insight_Date__c.field-meta.xml
<CustomField>
    <fullName>Insight_Date__c</fullName>
    <label>Data do Insight</label>
    <type>Date</type>
</CustomField>