force-app/main/default/objects/Meta_Insights_Daily__c/fields/Meta_Ad__c.field-meta.xml
<CustomField>
    <fullName>Meta_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meta Anúncio</label>
    <referenceTo>Meta_Ad__c</referenceTo>
    <relationshipLabel>Meta Insights Diários</relationshipLabel>
    <relationshipName>Meta_Insights_Daily</relationshipName>
    <type>Lookup</type>
</CustomField>