force-app/main/default/objects/Meta_Insights_Daily__c/fields/Meta_AdSet__c.field-meta.xml
<CustomField>
    <fullName>Meta_AdSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conjunto de Anúncios Meta</label>
    <referenceTo>Meta_AdSet__c</referenceTo>
    <relationshipLabel>Meta Insights Diários</relationshipLabel>
    <relationshipName>Meta_Insights_Daily</relationshipName>
    <type>Lookup</type>
</CustomField>