force-app/main/default/objects/Meta_Insights_Daily__c/fields/Parent_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Type__c</fullName>
    <label>Tipo do Objeto Pai</label>
    <length>40</length>
    <type>Text</type>
</CustomField>