force-app/main/default/objects/Meta_Insights_Daily__c/fields/Spend__c.field-meta.xml
<CustomField>
    <fullName>Spend__c</fullName>
    <label>Investimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>